Add documentation on AWS resources deployed for Orchestrator
Signed-off-by: Joary Paulo Wanzeler Fortuna <joarypl@fb.com>

--- a/docs/docusaurus/i18n/en.json
+++ b/docs/docusaurus/i18n/en.json
@@ -301,6 +301,9 @@
       "orc8r/hold_terraform_state_on_s3": {
         "title": "Hold Terraform state outside my local machine"
       },
+      "orc8r/development/orc8r_stack_on_aws": {
+        "title": "Orchestrator Stack on AWS"
+      },
       "orc8r/legacy/docker_setup": {
         "title": "Docker Setup"
       },
