--- a/docs/docusaurus/i18n/en.json
+++ b/docs/docusaurus/i18n/en.json
@@ -79,6 +79,18 @@
       "howtos/thanos": {
         "title": "Thanos"
       },
+      "howtos/troubleshooting/agw_unable_to_checkin": {
+        "title": "Access Gateway Unable to Check-in to Orchestrator"
+      },
+      "howtos/troubleshooting/generate_admin_operator_certificates": {
+        "title": "Generate and update admin_operator certificates"
+      },
+      "howtos/troubleshooting/update_certificates": {
+        "title": "Update rootCA and controller SSL certificates"
+      },
+      "howtos/troubleshooting/user_unable_to_attach": {
+        "title": "User is unable to attach to Magma"
+      },
       "howtos/config_agw_bridged": {
         "title": "AGW Bridged Mode"
       },
