--- a/docs/docusaurus/i18n/en.json
+++ b/docs/docusaurus/i18n/en.json
@@ -214,6 +214,12 @@
       "orc8r/deploy_intro": {
         "title": "Introduction"
       },
+      "orc8r/dev_dependencies": {
+        "title": "Module Dependencies"
+      },
+      "orc8r/dev_indexers": {
+        "title": "State Indexers"
+      },
       "orc8r/dev_minikube": {
         "title": "Deploy on Minikube"
       },
@@ -294,6 +300,9 @@
       },
       "proposals/p009_nms_mariadb_migration": {
         "title": "NMS MariaDB Migration"
+      },
+      "proposals/p010_subscriber_scaling": {
+        "title": "Subscriber Scaling"
       },
       "proposals/qos_enforcement": {
         "title": "proposals/qos_enforcement"
