--- a/docs/docusaurus/i18n/en.json
+++ b/docs/docusaurus/i18n/en.json
@@ -5,6 +5,9 @@
     "previous": "Previous",
     "tagline": "Bring more people online by enabling operators with open, flexible, and extensible network solutions",
     "docs": {
+      "architecture/agw_overview": {
+        "title": "AGW Overview"
+      },
       "basics/introduction": {
         "title": "Introduction"
       },
@@ -38,6 +41,9 @@
       },
       "cwf/troubleshooting": {
         "title": "cwf/troubleshooting"
+      },
+      "debugging_tools/dp_probe_cli": {
+        "title": "Data Path Probe Cli Command"
       },
       "debugging_tools/show_tech": {
         "title": "Show Tech"
@@ -154,6 +160,9 @@
       "lte/agw_130_upgrade": {
         "title": "Upgrading from 1.2"
       },
+      "lte/agw_140_upgrade": {
+        "title": "Upgrading from 1.3"
+      },
       "lte/agw_110_upgrade": {
         "title": "Upgrading from 1.0"
       },
@@ -265,6 +274,9 @@
       "orc8r/upgrade_1_4": {
         "title": "Upgrade to v1.4"
       },
+      "orc8r/upgrade_1_5": {
+        "title": "Upgrade to v1.5"
+      },
       "orc8r/upgrade_intro": {
         "title": "Introduction"
       },
@@ -303,6 +315,12 @@
       },
       "proposals/p010_subscriber_scaling": {
         "title": "Subscriber Scaling"
+      },
+      "proposals/p010_vendor_neutral_dp": {
+        "title": "proposals/p010_vendor_neutral_dp"
+      },
+      "proposals/p011_victoriametrics": {
+        "title": "VictoriaMetrics as Magma's TSDB"
       },
       "proposals/qos_enforcement": {
         "title": "proposals/qos_enforcement"
@@ -623,8 +641,8 @@
         "sidebar_label": "Setup (Bare Metal)"
       },
       "version-1.1.0/lte/version-1.1.0-agw_110_upgrade": {
-        "title": "Upgrading from 1.0",
-        "sidebar_label": "Upgrading from 1.0"
+        "title": "Upgrade to  v1.1",
+        "sidebar_label": "Upgrade to v1.1"
       },
       "version-1.1.0/nms/version-1.1.0-nms_grafana": {
         "title": "Custom Grafana Dashboards"
@@ -681,7 +699,7 @@
         "sidebar_label": "Setup (Bare Metal)"
       },
       "version-1.2.0/lte/version-1.2.0-agw_120_upgrade": {
-        "title": "Upgrading from 1.1"
+        "title": "Upgrade to v1.2"
       },
       "version-1.2.0/nms/version-1.2.0-nms_dashboard": {
         "title": "NMS Dashboard"
@@ -751,7 +769,7 @@
         "sidebar_label": "Setup (Bare Metal)"
       },
       "version-1.3.0/lte/version-1.3.0-agw_130_upgrade": {
-        "title": "Upgrading from 1.2"
+        "title": "Upgrade to v1.3"
       },
       "version-1.3.0/orc8r/version-1.3.0-deploy_build": {
         "title": "Build Orchestrator"
@@ -833,6 +851,9 @@
       "version-1.4.0/lte/version-1.4.0-setup_deb": {
         "title": "AGW Setup (Bare Metal)",
         "sidebar_label": "Setup (Bare Metal)"
+      },
+      "version-1.4.0/lte/version-1.4.0-agw_140_upgrade": {
+        "title": "Upgrading from 1.3"
       },
       "version-1.4.0/nms/version-1.4.0-alerts": {
         "title": "Alerts"
@@ -933,8 +954,8 @@
       "version-1.4.0/proposals/version-1.4.0-proposal_process": {
         "title": "Magma Proposals"
       },
-      "version-1.4.0/proposals/version-1.4.0-p[###]_[short-description]": {
-        "title": "[Title of Design Doc]"
+      "version-1.4.0/proposals/version-1.4.0-proposal_template": {
+        "title": "Title of Design Doc"
       }
     },
     "links": {
@@ -955,6 +976,7 @@
       "FAQ": "FAQ",
       "Contributing": "Contributing",
       "Proposals": "Proposals",
+      "Architecture": "Architecture",
       "NMS User Guide": "NMS User Guide",
       "Symphony": "Symphony"
     }
