[docs] Add guidelines for force-merge PRs
Signed-off-by: Hunter Gatewood <hgatewood@gmail.com>

--- a/docs/docusaurus/i18n/en.json
+++ b/docs/docusaurus/i18n/en.json
@@ -14,6 +14,9 @@
       "basics/quick_start_guide": {
         "title": "Quick Start Guide"
       },
+      "contributing/contribute_codeowners": {
+        "title": "Codeowners Workflow"
+      },
       "contributing/contribute_conventions": {
         "title": "Code Conventions"
       },
