[inbound roaming] Feature docs
Signed-off-by: Oriol Batalla <obatalla@fb.com>

--- a/docs/docusaurus/i18n/en.json
+++ b/docs/docusaurus/i18n/en.json
@@ -76,6 +76,9 @@
       "howtos/he_api": {
         "title": "Header Enrichment"
       },
+      "howtos/inbound_roaming": {
+        "title": "Inbound Roaming"
+      },
       "howtos/readme_package": {
         "title": "Packaging"
       },
