Adding ghz role in ansible to install and build
Signed-off-by: Alex Rodriguez <ardzoht@gmail.com>

--- a/docs/docusaurus/i18n/en.json
+++ b/docs/docusaurus/i18n/en.json
@@ -346,6 +346,9 @@
       "proposals/p012_resource-tagging": {
         "title": "proposals/p012_resource-tagging"
       },
+      "proposals/p013_Ubuntu_upgrade": {
+        "title": "AGW Ubuntu upgrade"
+      },
       "proposals/qos_enforcement": {
         "title": "proposals/qos_enforcement"
       },
