[Docs] Move proposal process, add to docusaurus
Signed-off-by: Scott Harrison Moeller <smoeller@fb.com>

--- a/docs/docusaurus/i18n/en.json
+++ b/docs/docusaurus/i18n/en.json
@@ -370,6 +370,9 @@
       "proposals/p013_Ubuntu_upgrade": {
         "title": "AGW Ubuntu upgrade"
       },
+      "proposals/p014_proposal_process": {
+        "title": "Magma Proposals"
+      },
       "proposals/qos_enforcement": {
         "title": "proposals/qos_enforcement"
       },
