--- a/docs/docusaurus/i18n/en.json
+++ b/docs/docusaurus/i18n/en.json
@@ -14,6 +14,9 @@
       "basics/quick_start_guide": {
         "title": "Quick Start Guide"
       },
+      "contributing/contribute_ci_checks": {
+        "title": "Continuous Integration Checks"
+      },
       "contributing/contribute_codeowners": {
         "title": "Codeowners Workflow"
       },
@@ -109,6 +112,9 @@
       "howtos/ue_metering": {
         "title": "UE Usage Metering"
       },
+      "lte/access_service_restrictions": {
+        "title": "Restricting Network Access"
+      },
       "lte/architecture_overview": {
         "title": "Overview"
       },
@@ -130,17 +136,26 @@
       "lte/deploy_config_enodebd": {
         "title": "Configure eNodeB"
       },
+      "lte/deploy_install_ubuntu": {
+        "title": "Install AGW on Ubuntu 20.04"
+      },
       "lte/deploy_install": {
         "title": "Install AGW"
       },
       "lte/dev_notes": {
         "title": "Developer Notes"
       },
+      "lte/dev_unit_testing": {
+        "title": "Unit Testing"
+      },
       "lte/eventd": {
         "title": "Event Reporting"
       },
       "lte/deploy_config_agw_ha": {
         "title": "Configure AGW for HA"
+      },
+      "lte/integrate_sentry": {
+        "title": "Sentry Integration"
       },
       "lte/pipelined_tests": {
         "title": "Pipelined testing framework"
@@ -253,6 +268,9 @@
       "orc8r/deploy_intro": {
         "title": "Introduction"
       },
+      "orc8r/deploy_orcl": {
+        "title": "Experimental Orc8r Deployer"
+      },
       "orc8r/dev_dependencies": {
         "title": "Module Dependencies"
       },
@@ -349,6 +367,9 @@
       "proposals/p010_vendor_neutral_dp": {
         "title": "proposals/p010_vendor_neutral_dp"
       },
+      "proposals/p011_intra_agw_mobility": {
+        "title": "Intra-AGW Mobility (S1 Mobility)"
+      },
       "proposals/p011_victoriametrics": {
         "title": "VictoriaMetrics as Magma's TSDB"
       },
@@ -357,6 +378,9 @@
       },
       "proposals/p013_Ubuntu_upgrade": {
         "title": "AGW Ubuntu upgrade"
+      },
+      "proposals/p014_proposal_process": {
+        "title": "Magma Proposals"
       },
       "proposals/qos_enforcement": {
         "title": "proposals/qos_enforcement"
