[docs] Cut v1.5 docs (#6466)
Signed-off-by: Hunter Gatewood <hgatewood@gmail.com>

--- a/docs/docusaurus/i18n/en.json
+++ b/docs/docusaurus/i18n/en.json
@@ -382,6 +382,9 @@
       "proposals/p014_proposal_process": {
         "title": "Magma Proposals"
       },
+      "proposals/p015_tech_debt_week": {
+        "title": "Tech Debt Week Processes"
+      },
       "proposals/qos_enforcement": {
         "title": "proposals/qos_enforcement"
       },
