[docs] Add Resources folder with PCAPs and Useful Links sections
Signed-off-by: Oriol Batalla <obatalla@fb.com>

--- a/docs/docusaurus/i18n/en.json
+++ b/docs/docusaurus/i18n/en.json
@@ -418,6 +418,12 @@
       "proposals/proposal_template": {
         "title": "Title of Design Doc"
       },
+      "resources/ref_pcap": {
+        "title": "PCAP Collection"
+      },
+      "resources/ref_useful_links": {
+        "title": "Useful Links"
+      },
       "version-1.0.0/basics/version-1.0.0-introduction": {
         "title": "Introduction"
       },
