Small information and format changes
Signed-off-by: Joary Paulo Wanzeler Fortuna <joarypl@fb.com>

--- a/docs/docusaurus/i18n/en.json
+++ b/docs/docusaurus/i18n/en.json
@@ -284,7 +284,7 @@
         "title": "Experimental Orc8r Deployer"
       },
       "orc8r/dev_aws_stack": {
-        "title": "Orchestrator AWS Stack"
+        "title": "AWS Stack"
       },
       "orc8r/dev_dependencies": {
         "title": "Module Dependencies"
